Fixed title/content overflow issue
refs https://github.com/TryGhost/Team/issues/3258

--- a/assets/css/blog/pagination.css
+++ b/assets/css/blog/pagination.css
@@ -44,4 +44,5 @@
     font-weight: 600;
     color: var(--secondary-text-color);
     text-transform: uppercase;
+    word-break: break-word;
 }
